<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingPageFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/background_circle"
        android:translationY="-24dp"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="21dp"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/iv_foreground"
            android:contentDescription="@string/onboarding_iv_foreground_contentDescription"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/onboarding_page0" />

        <TextView
            android:id="@+id/tv_headline"
            android:textSize="24sp"
            android:textAlignment="center"
            android:fontFamily="@font/rubik_bold"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            app:layout_constraintTop_toBottomOf="@id/iv_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/onboardingPage_tv_headline_page0" />

        <TextView
            android:id="@+id/tv_description"
            android:textSize="16sp"
            android:textAlignment="center"
            android:fontFamily="@font/rubik"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/onboardingPage_tv_description_page0" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>