<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgroundSecondary"
    tools:context=".ui.result.ResultFragment">

    <include layout="@layout/background_circle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/toolbar_result_title"
            app:titleTextColor="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_bt_history"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true">

                <androidx.constraintlayout.helper.widget.Flow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:constraint_referenced_ids="tv_button_text_history, iv_button_ic_history"
                    app:flow_horizontalGap="12dp" />

                <TextView
                    android:id="@+id/tv_button_text_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/rubik"
                    android:text="@string/tv_button_history_text"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <ImageView
                    android:id="@+id/iv_button_ic_history"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:contentDescription="@string/tv_button_history_text"
                    android:src="@drawable/ic_history"
                    app:tint="@color/white"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="32dp">

                <TextView
                    android:id="@+id/tv_cardTitle"
                    android:text="@string/tv_cardTitle_text"
                    android:textSize="22sp"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:viewBindingIgnore="true" />

                <TextView
                    android:id="@+id/tv_resultLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_bold"
                    android:text="@string/tv_cardTitle_text"
                    android:textColor="@color/measureResultNormalText"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_cardTitle" />

                <my.dahr.cardiocam.ui.components.seekbar.CustomSeekBar
                    android:id="@+id/seekBar_resultLevel"
                    android:layout_width="match_parent"
                    android:layout_height="19dp"
                    android:layout_marginTop="20dp"
                    android:max="100"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:progress="50"
                    android:progressDrawable="@android:color/transparent"
                    android:thumb="@drawable/thumb_seekbar_result"
                    android:thumbOffset="7dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_resultLevel"  />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>